-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-aarch32-8
-
Component/s: hotspot
-
None
-
aarch32
-
linux
CPU ID is missed in the crash log.
# Java VM: OpenJDK VM (25.60-b99-debug interpreted mode linux- )
Corresponding define is absent at vm_version.cpp
aarch32-jdk9 is not affected
# Java VM: OpenJDK VM (25.60-b99-debug interpreted mode linux- )
Corresponding define is absent at vm_version.cpp
aarch32-jdk9 is not affected