8151058: aarch32: CPU ID is missed at crash log Reviewed-by: enevill Contributed-by: snazarkin@azul.com